--- a/gb/23/9/23/n14079890.md
+++ b/gb/23/9/23/n14079890.md
@@ -18,10 +18,6 @@
 <p>农粮署主秘陈启荣表示，农粮署从111-114年每年编列23亿，4年合计92亿经费帮助农民购买农机具，农民不需排队或抽签，方便农民改善生产条件；另顺应净零减碳政策，将电动农机补助额度从1/3提升到1/2，今年更推出汰旧换新措施，针对燃油农机汰换为电动农机者，加码1千到3万不等补助，欢迎农友们采购新型又好用的农机，踊跃申请农机补助。</p>
 <p>农业处表示，今年除了各式新型专业农机具展示之外，也邀集建设相关机具、县内优质农特产品厂商及各式农业展示活动，包含休闲农业、友善农业、青年农特展区及云林良品等；农业处也配合包含国产木DIY、云林县品牌猪肉推广促销及鲁肉饭免费品尝等活动，从专业农机设施、资材，到云林农特产品市集，应有尽有，欢迎全国民众即日起至25日到虎尾高铁特定看展。</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/4/n13838629.md#1">筹备国庆焰火 嘉县以经费效益最大化为优先</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/23/n14002577.md#1">推动、研发台茶产业 茶改场走过两甲子</a></li>
@@ -29,41 +25,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066003.md#1">新泽西举办大型集市 干净世界展位引关注</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068243.md#1">云林国际农机展虎尾高铁特区将盛大开展 邀民众共襄盛举</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078473.md#1">云林国际农业机械暨资材展 9月23日盛大登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079883.md#1">屏东明扬工厂大火 寻获第4位殉职消防员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079806.md#1">明扬大火百余人伤 海尼根屏东酒厂捐一日所得救灾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079802.md#1">竹园派出所异地重建 提升守护交通治安动能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079812.md#1">环球购物中心捐30万元  助屏东工厂爆炸案救灾</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106473.md#1">中正AI团队 巴黎自驾车ICCV2023世界冠军</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106237.md#1">“蛋疼”请不要害羞，要勇于就诊</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089583.md#1">在故宫南院看见 18世纪朝鲜王朝与清宫艺术的交会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106198.md#1">延续夫人爱心 林金山捐赠县府2辆复康巴士</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/25/n11000755.md#1" target="_blank">文革处决纪录：非战争下的中国之最</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075338.md#1">女子濒死见到已故亲人 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073092.md#1">因诗赋而独步后宫的晋代才女左棻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079569.md#1">【热点互动】“去风险”是美中间“公平游戏”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079496.md#1">【菁英论坛】中南海黑洞 军队谋反是宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079756.md#1">【全球新闻】有图有真相 美国驻日大使再打脸中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078601.md#1">岳山：邓朴方彻底退场 习近平“加把锁”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078482.md#1">大陆天才儿童10岁读大学16岁读博 28岁躺平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078126.md#1">杭州亚运前 习近平访义乌 安保布局引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078773.md#1">袁咏仪育儿受挫看心理医生 不敢再叫爱子小名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078045.md#1">59岁张曼玉近况曝光 生日惊喜拍片吐心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078736.md#1">赵又廷谈4岁爱女长相 一句感慨笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077984.md#1">陆男星张鲁一被曝失联 老婆和剧组均联系不上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078076.md#1">遭封杀两年 张哲瀚大马开唱 望重拾演员身份</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078949.md#1">iPhone这个功能可以助眠 很多人不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061510.md#1">中医的“肝”比西医的多一功能 很重要！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077230.md#1">最新病毒更易侵犯疫苗接种者？专家：快补这些营养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070611.md#1">台教授罹癌后更健康 抗癌3法宝 这1宝最重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077099.md#1">糖对大脑的刺激堪比毒品？戒糖就要先懂糖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/23/n14079890.htm">云林国际农业机械暨资材展 23日盛大开展</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079890.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
