--- a/gb/23/3/14/n13949914.md
+++ b/gb/23/3/14/n13949914.md
@@ -16,10 +16,6 @@
 <p>邱莉琳护理师补充说，腹膜透析跟血液透析比起来，优缺点差不多，不过生活品质还是腹膜透析比较好一点。她举例有位腹膜透析十年经历的病人，为维持工作和生活作息，选择自己在家行腹膜透析治疗，在历经新冠肺炎严峻挑战时，可以减少外出接触高危险群的机会，也相对降低染疫风险，让健康更有保障，而且即便发生感染或其他状况，还是可以回到血液透析。</p>
 <p>吴文中主任提醒，及早接受卫教与追踪，做好饮食控制并调整生活习惯，越有助于延缓肾脏恶化的时间，乡亲如有肾脏保健相关问题，可以主动与苗医肾脏科团队联系，洽询专线：037-261920转2184周慧琴卫教师。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/4/n13620838.md#1">全方位整体照护 延缓慢性肾脏病走向洗肾</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/17/n13652482.md#1">自我检测肾功能 彰基“泡水高贫倦”五字诀</a></li>
@@ -27,41 +23,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/24/n13744262.md#1">端午飘香 肾脏病友也能安心吃的咖喱鸡肉粽</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/15/n13802704.md#1">肾脏内科食品营养博士张嘉峯医师 造福桃园</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/8/n13881149.md#1">10症状是肾脏病警讯 中医师：冬天补肾春天不病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076693.md#1">“苗栗市全民运动馆”兴建工程动土典礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076690.md#1">“肾”行事庆团圆 食在安心 远离中秋“劫”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076214.md#1">竹市绿议员质疑标案涉不法 市府驳斥批恶意影射</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14075878.md#1">飞翔天际的契机！黑蝙蝠邱垂宇忆年少追飞机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106523.md#1">清大以冠状醚取得海水产氢 大幅提升速率及产量</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105903.md#1">112年学习扶助 STEAM科技教育竞赛绩优团队  县府表扬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105917.md#1">苗县食安优良评选   99家业荣获优良标章</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105890.md#1">投资诈骗要小心 一提二汇三见底</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/31/n10821837.md#1" target="_blank">林辉：文革偷听“敌台”让一些中国人觉醒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/11/10/n4570585.md#1" target="_blank">四川老人两次重伤不治痊愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062287.md#1">【古道人生】两人为躲债藏山洞 结果都把债还了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076239.md#1">【新闻大破解】习向红二代群虎宣战？中共败象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076267.md#1">【新闻大家谈】蔡奇动手 变身习近平监护人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075043.md#1">【环球直击】中共称严惩网暴 分析：加剧监控</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075512.md#1">专家：军中打虎变高级黑 习近平遇严重挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075303.md#1">【新闻五人行】副国级抓不完 习全面宣战？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074550.md#1">军媒爆火箭军“短板”专家：习强军梦碎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074372.md#1">马斯克公开她角色扮演的私人照 安柏赫德不满</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075690.md#1">李易峰因嫖娼遭封杀一年 疑似复出直播遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075692.md#1">中共抗日剧饰日军官 马卫军罹喉癌于东京病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075660.md#1">袁冰妍被点名偷漏税 微博遭禁 电视台急切割</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074723.md#1">金马影后李心洁办画展 晒双胞胎儿子“杰作”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075482.md#1">日本80岁老翁登顶2230次 富士山为何吸引人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069676.md#1">红肉能防皮肤癌？8食物或营养素降黑色素瘤风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074518.md#1">腌牛排爱用这几味 肉质松软又多汁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073756.md#1">研究：高脂肪早餐可提升晚期肺癌药疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060272.md#1">动手做美味面包：生吐司 当早餐健康可口</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/14/n13949914.htm">肾功能无声恶化 尿毒症上身 治疗方式抉择</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
